WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193370
Compile out Web API Statistics Collection
https://bugs.webkit.org/show_bug.cgi?id=193370
Summary
Compile out Web API Statistics Collection
John Wilander
Reported
2019-01-11 15:24:22 PST
Web API Statistics Collection is not ready and thus should not affect what's processed and saved in the ResourceLoadStatistics data model.
Attachments
Patch
(60.49 KB, patch)
2019-01-11 15:52 PST
,
John Wilander
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Wilander
Comment 1
2019-01-11 15:24:43 PST
<
rdar://problem/45388584
>
John Wilander
Comment 2
2019-01-11 15:52:19 PST
Created
attachment 358957
[details]
Patch
Brent Fulgham
Comment 3
2019-01-11 16:13:48 PST
Comment on
attachment 358957
[details]
Patch Ah, great! Thank you for taking care of this. r=me
John Wilander
Comment 4
2019-01-11 16:17:41 PST
Thanks for the review, Brent! I'll wait for green bubbles before landing.
John Wilander
Comment 5
2019-01-11 16:46:02 PST
mac-debug failing tests are unrelated.
WebKit Commit Bot
Comment 6
2019-01-11 17:13:39 PST
Comment on
attachment 358957
[details]
Patch Clearing flags on attachment: 358957 Committed
r239888
: <
https://trac.webkit.org/changeset/239888
>
WebKit Commit Bot
Comment 7
2019-01-11 17:13:41 PST
All reviewed patches have been landed. Closing bug.
Truitt Savell
Comment 8
2019-01-14 08:59:47 PST
It looks like the changes in
https://trac.webkit.org/changeset/239888/webkit
has caused 5 API tests to fail. 3 are failing on release and 5 are failing on debug. Build:
https://build.webkit.org/builders/Apple%20High%20Sierra%20Debug%20WK1%20%28Tests%29/builds/7194
Log:
https://build.webkit.org/builders/Apple%20High%20Sierra%20Debug%20WK2%20%28Tests%29/builds/6210/steps/run-api-tests/logs/stdio
The tests seem to be failing to open a database Example: TestWebKitAPI.WebKit.WebsiteDataStoreCustomPathsWithoutPrewarming /Volumes/Data/slave/highsierra-debug/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WebsiteDataStoreCustomPaths.mm:140 Expected equality of these values: [getNextMessage().body UTF8String] Which is: "Exception: ReferenceError: Can't find variable: openDatabase" "Exception: QuotaExceededError: The quota has been exceeded."
John Wilander
Comment 9
2019-01-14 09:42:27 PST
These API tests may very well be for this exact feature. I’ll have a look today.
John Wilander
Comment 10
2019-01-14 11:16:11 PST
I've now run these API tests on my machine with the changes in the patch and they pass. Additionally, they are unrelated to the code change.
Truitt Savell
Comment 11
2019-01-14 16:48:02 PST
After getting a repro case and bisecting the revisions I found 239888 to not be at fault here.
John Wilander
Comment 12
2019-01-14 16:49:02 PST
Thanks, Truitt.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug