Source/WebKit/Shared/WebCoreArgumentCoders.cpp
@@ -2652,7 +2652,8 @@ void ArgumentCoder<ResourceLoadStatistics>::encode(Encoder& encoder, const WebCo
     encoder << statistics.isPrevalentResource;
     encoder << statistics.isVeryPrevalentResource;
     encoder << statistics.dataRecordsRemoved;
-    
+
+#if ENABLE(WEB_API_STATISTICS)
     encoder << statistics.fontsFailedToLoad;
     encoder << statistics.fontsSuccessfullyLoaded;
     encoder << statistics.topFrameRegistrableDomainsWhichAccessedWebAPIs;
@@ -2661,7 +2662,7 @@ void ArgumentCoder<ResourceLoadStatistics>::encode(Encoder& encoder, const WebCo
     
     encoder << statistics.navigatorFunctionsAccessed;
     encoder << statistics.screenFunctionsAccessed;
-    
+#endif
 }
 
 Optional<ResourceLoadStatistics> ArgumentCoder<ResourceLoadStatistics>::decode(Decoder& decoder)
@@ -2722,6 +2723,7 @@ Optional<ResourceLoadStatistics> ArgumentCoder<ResourceLoadStatistics>::decode(D
     if (!decoder.decode(statistics.dataRecordsRemoved))
         return WTF::nullopt;
     
+#if ENABLE(WEB_API_STATISTICS)
     if (!decoder.decode(statistics.fontsFailedToLoad))
         return WTF::nullopt;
     
@@ -2739,7 +2741,8 @@ Optional<ResourceLoadStatistics> ArgumentCoder<ResourceLoadStatistics>::decode(D
     
     if (!decoder.decode(statistics.screenFunctionsAccessed))
         return WTF::nullopt;
-    
+#endif
+
     return WTFMove(statistics);
 }
 
